# ChinaOSRacerUsbDisplayDriver

./: .gitignore  CMakeLists.txt  README.md
RacerDisplay/: CMakeLists.txt  RacerDisplay.cpp  driver.cpp  driver.hpp
config/: 10-usbdisplay.conf  usbdisp.sh
libevdipp/: CMakeLists.txt  evdi.cpp  screen.cpp  screen.hpp
libusbdisp/: .gitignore  README.md  xrandr.c  xrandr.h
libusbdisp/lib/amd64/: libusbdisp.so.0.0.0
libusbdisp/lib/arm64/: libusbdisp.so.0.0.0
